<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BasicTwitter</string>
    <string name="action_settings">Settings</string>
    <string name="action_compose">Compose</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="tweet_body_label">tweet body</string>
    <string name="tweet_username">username</string>
    <string name="timestamp_label">timestamp</string>
    <string name="remaining_char_label">140</string>
    <string name="btn_tweet_label">Tweet</string>
    <string name="foo_label">foo</string>
    <string name="screenname_compose_label">\@foo</string>
    <string name="compose_hint">What\'s happening?</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="action_profile">Profile</string>

</resources>