<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_compose"
        android:orderInCategory="5"
        myapp:showAsAction="always"
        android:icon="@drawable/ic_action_compose"
        android:title="@string/action_compose"/>
    
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="6"
        myapp:showAsAction="always"
        android:icon="@drawable/ic_action_profile"
        android:title="@string/action_profile"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        myapp:showAsAction="never"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"/>

</menu>