<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#ffffff" >

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignBottom="@+id/tvCharCount"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@android:drawable/ic_delete" />

        <Button
            android:id="@+id/btnTweet"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/btn_tweet_label" />

        <TextView
            android:id="@+id/tvCharCount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/btnTweet"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btnTweet"
            android:gravity="center"
            android:text="@string/remaining_char_label" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlUserInfo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/rlHeader"
        android:background="#ffffff" >

        <ImageView
            android:id="@+id/ivProfileImgCompose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tvUsernameCompose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/ivProfileImgCompose"
            android:text="@string/foo_label" />

        <TextView
            android:id="@+id/tvScreennameCompose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvUsernameCompose"
            android:layout_below="@+id/tvUsernameCompose"
            android:text="@string/screenname_compose_label" />

    </RelativeLayout>

    <EditText
        android:id="@+id/etTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/rlUserInfo"
        android:ems="10"
        android:hint="@string/compose_hint"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

</RelativeLayout>